--- a/resizeSquare/Base.lproj/Main.storyboard
+++ b/resizeSquare/Base.lproj/Main.storyboard
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="resizeSquare" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +15,33 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" misplaced="YES" image="P1060335.JPG" translatesAutoresizingMaskIntoConstraints="NO" id="pC6-Sp-FzD">
+                                <rect key="frame" x="170" y="28" width="260" height="260"/>
+                            </imageView>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" misplaced="YES" image="test-1.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="Yi3-G3-H2q">
+                                <rect key="frame" x="170" y="296" width="260" height="260"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="pC6-Sp-FzD" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="Rzc-2T-FJI"/>
+                            <constraint firstAttribute="centerX" secondItem="Yi3-G3-H2q" secondAttribute="centerX" id="UlG-9F-TaX"/>
+                            <constraint firstItem="Yi3-G3-H2q" firstAttribute="top" secondItem="pC6-Sp-FzD" secondAttribute="bottom" constant="8" id="aXP-6o-hst"/>
+                            <constraint firstAttribute="centerX" secondItem="pC6-Sp-FzD" secondAttribute="centerX" id="kRi-V7-dyt"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="pC6-Sp-FzD" id="dvH-Xi-Aaq"/>
+                        <outlet property="secondImageView" destination="Yi3-G3-H2q" id="nat-B5-T6s"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="P1060335.JPG" width="576" height="1024"/>
+        <image name="test-1.jpg" width="800" height="520"/>
+    </resources>
 </document>
